--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development --open --hot --config ./config/webpack.dev.js",
-    "build": "webpack --mode production --config ./config/webpack.prod.js",
+    "build": "rm -rf dist && webpack --mode production --config ./config/webpack.prod.js",
     "lint": "npm run lint:code && npm run lint:style",
     "lint:fix": "npm run lint:code:fix && npm run lint:style:fix",
     "lint:code": "eslint src/**/*.{js,ts,tsx} --quiet",
@@ -94,6 +94,7 @@
     "stylelint-config-sass-guidelines": "^10.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.82.1",
