--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "./src/",
     "target": "es6",
     "lib": ["dom", "dom.iterable"],
     "allowJs": true,
@@ -15,16 +15,16 @@
     "jsx": "react-jsx",
     "incremental": false,
     "paths": {
-      "@components/*": ["components/*"],
-      "@utils/*": ["utils/*"],
-      "@common/*": ["common/*"],
-      "@services/*": ["services/*"],
-      "@models/*": ["models/*"],
-      "@mock/*": ["mock/*"],
-      "@assets/*": ["assets/*"],
-      "@types/*": ["types/*"],
-      "@styles/*": ["styles/*"],
-      "@pages/*": ["pages/*"],
+      "@components/*": ["./components/*"],
+      "@utils/*": ["./utils/*"],
+      "@common/*": ["./common/*"],
+      "@services/*": ["./services/*"],
+      "@models/*": ["./models/*"],
+      "@mock/*": ["./mock/*"],
+      "@assets/*": ["./assets/*"],
+      "@types/*": ["./types/*"],
+      "@styles/*": ["./styles/*"],
+      "@pages/*": ["./pages/*"],
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
