create step to make a .env file

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          NEXT_PUBLIC_REWIRING_AMERICA_TOKEN: ${{ secrets.NEXT_PUBLIC_REWIRING_AMERICA_TOKEN }}
+          NEXT_PUBLIC_REWIRING_AMERICA_API: ${{ secrets.NEXT_PUBLIC_REWIRING_AMERICA_API }}
+          directory: <directory_name>
+          file_name: .env
+          fail_on_empty: false
+
       - name: Install dependencies
         run: npm i
 
