--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project Created Using Typescript, React, and Styled Components!",
   "scripts": {
     "start": "webpack serve --mode development --open --hot --config ./config/webpack.dev.js",
+    "build-webpack": "webpack --config ./config/webpack.prod.js",
     "build": "rm -rf dist && webpack --mode production --config ./config/webpack.prod.js",
     "lint": "npm run lint:code && npm run lint:style",
     "lint:fix": "npm run lint:code:fix && npm run lint:style:fix",
@@ -54,8 +55,8 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/cypress": "^1.1.3",
     "@types/jest": "^29.5.1",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^17.0.59",
+    "@types/react-dom": "^17.0.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
