--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
     "@babel/types": "^7.21.5",
     "@ls-lint/ls-lint": "^1.11.2",
     "@storybook/addon-actions": "^6.5.12",
@@ -63,6 +66,7 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
+    "babel-loader": "^9.1.2",
     "chance": "^1.1.11",
     "classnames": "^2.3.2",
     "css-loader": "^6.7.3",
