--- a/package.json
+++ b/package.json
@@ -42,12 +42,8 @@
     ]
   },
   "devDependencies": {
-<<<<<<< Updated upstream
     "@babel/core": "^7.21.8",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-=======
-    "@babel/core": "^7.21.4",
->>>>>>> Stashed changes
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/types": "^7.21.5",
@@ -71,11 +67,8 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
-<<<<<<< Updated upstream
-    "babel-loader": "^9.1.2",
-=======
     "babel-jest": "^29.5.0",
->>>>>>> Stashed changes
+    "babel-loader": "^9.1.2",
     "chance": "^1.1.11",
     "classnames": "^2.3.2",
     "css-loader": "^6.7.3",
@@ -90,6 +83,8 @@
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.7.5",
     "msw": "^1.2.1",
     "prettier": "^2.8.8",
@@ -128,6 +123,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "cypress": "^12.12.0",
+    "jsdom": "^22.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
