--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "test:jest": "jest --config=jest.config.js",
     "test:jest:watch": "jest --config=jest.config.js --watch",
     "test:jest:coverage": "jest --config=jest.config.js --coverage",
-    "test:cypress": "cypress run",
-    "test:cypress:open": "cypress open",
     "prepare": "husky install"
   },
   "homepage": "./",
@@ -54,11 +52,9 @@
     "@storybook/builder-webpack5": "^6.5.12",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^7.0.7",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/babel__core": "^7.20.0",
-    "@types/cypress": "^1.1.3",
     "@types/jest": "^29.5.1",
     "@types/react": "^17.0.59",
     "@types/react-dom": "^17.0.20",
@@ -87,6 +83,7 @@
     "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.7.5",
     "msw": "^1.2.1",
+    "node-fetch": "^3.3.1",
     "prettier": "^2.8.8",
     "react-hook-form": "^7.43.9",
     "react-test-renderer": "^18.2.0",
@@ -105,8 +102,7 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0",
-    "whatwg-fetch": "^3.6.2"
+    "webpack-dev-server": "^4.15.0"
   },
   "eslintConfig": {
     "extends": [
@@ -122,13 +118,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "cypress": "^12.12.0",
     "jsdom": "^22.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.10",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "jest-styled-components": "^7.1.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "msw": {
     "workerDirectory": "src"
