--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook ",
     "serve-storybook": "serve storybook-static",
-    "test:jest": "jest --config=jest.config.js",
+    "test:jest": "jest --config=jest.config.js --coverage",
     "test:jest:watch": "jest --config=jest.config.js --watch",
     "test:jest:coverage": "jest --config=jest.config.js --coverage",
     "prepare": "husky install"
@@ -118,13 +118,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "jest-styled-components": "^7.1.1",
     "jsdom": "^22.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.2",
-    "jest-styled-components": "^7.1.1",
     "whatwg-fetch": "^3.6.2"
   },
   "msw": {
